tests/ui/struct_subcommand.stderr
error: proc-macro derive panicked
  --> $DIR/struct_subcommand.rs:11:10
   |
11 | #[derive(StructOpt, Debug)]
   |          ^^^^^^^^^
   |
   = help: message: subcommand is only allowed on fields
